--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.4",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
@@ -34,7 +35,7 @@
       "react-app/jest"
     ],
     "rules": {
-      "react-hooks/exhaustive-deps":"off"
+      "react-hooks/exhaustive-deps": "off"
     }
   },
   "browserslist": {
