--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "sweetalert2": "^11.1.4",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.18",
     "node-sass": "^6.0.1"
   }
 }
