--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.1.4",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
